--- a/packages/asyncy.com/src/layouts/index.scss
+++ b/packages/asyncy.com/src/layouts/index.scss
@@ -7,7 +7,7 @@
 @import '../assets/fonts/1804-GFNGYO';
 
 body {
-  background: black;
+  background: #111;
   color: white;
   font-size: 1em;
   font-family: Graphik Web,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
